# cppClass

./: .gitignore  README.md
chapter_1/: main.cpp  readme.md
chapter_1/exercises/: ex1.cpp  ex2.cpp
chapter_10/: readme.md  skeleteonTests.cpp
chapter_10/sampleCMake/: CMakeLists.txt
chapter_11/: RAIIWrapper.cpp  readme.md
chapter_2/: arrayType.cpp  compare.cpp  destructor.cpp  enumeration.cpp  floatType.cpp  pod.cpp  readme.md  sizeByte.cpp
chapter_2/exercises/: ex.cpp
chapter_3/: member-initialization-list.cpp  pointer.cpp  readme.md  references.cpp  thisPointer.cpp
chapter_3/exercises/: ex3.cpp
chapter_4/: ObjectLifeCycle.cpp  copyObject.cpp  exceptions.cpp  handlingExceptions.cpp  readme.md  rvalueReference.cpp  throwingDestructors.cpp
chapter_5/: loggerBank2.cpp
chapter_6/: readme.md  staticCast.cpp  templateType.cpp  typeChecking.cpp
chapter_7/: placement.cpp  readme.md  typeAlias.cpp  unpack0bjects.cpp
chapter_8/: constexprIF.cpp  loops.cpp  nameSpaces.cpp  readme.md
chapter_9/: histogram.cpp  pointerFunction.cpp  variadicFunc.cpp
cppPrograming/: .gitignore  readme.md
cppPrograming/Mystring-start/: Mystring-start.workspace
cppPrograming/Section13/: Section13.workspace
cppPrograming/Section15/: Section15.workspace
cppPrograming/Section16/: Section16.workspace
cppPrograming/Section17/: Section17.workspace
cppPrograming/Section18/: Section18.workspace
cppPrograming/Section19/: Section19.workspace
cppPrograming/Section20/: Section20.workspace
cppPrograming/Section21/: Section21.workspace
cppPrograming/Section23/: Section23.workspace
cppPrograming/Section5/: readme.md
cppPrograming/section4/: section4.workspace
cppPrograming/sectionMid/: readme.md  sectionMid.workspace
cppPrograming/workspace1/: workspace1.workspace
cppPrograming/workspace2/: workspace2.workspace
crashcourse/: CMakeLists.txt  README.md
crashcourse/chapter_1/: funtions.cpp
crashcourse/chapter_10/: brakeCar.cpp
crashcourse/chapter_11/: smart_ptrs.cpp
crashcourse/chapter_13/: readme.md
crashcourse/chapter_16/: listing_16_1.cpp  listing_16_10.cpp  listing_16_14.cpp  listing_16_15.cpp  listing_16_16.cpp  listing_16_17.cpp  listing_16_18.cpp  listing_16_19.cpp  listing_16_2.cpp  listing_16_3.cpp  listing_16_5.cpp  listing_16_7.cpp  listing_16_8.cpp  listing_16_9.cpp  readme.md
crashcourse/chapter_17/: filesystem.cpp  listing_17_2.cpp  listing_17_3.cpp  listing_17_4.cpp  listing_17_5.cpp  listing_17_6.cpp  listing_17_7.cpp  listing_17_8.cpp  listing_17_9.cpp  readme.md
crashcourse/chapter_18/: graph.cpp  readme.md
crashcourse/chapter_19/: concurrency.cpp  factor_parallel.cpp  goat_rodeo.cpp  goat_rodeo_atomic.cpp  goat_rodeo_cv.cpp  goat_rodeo_guards.cpp  goat_rodeo_locks.cpp  parallelism.cpp  readme.md  (+1 more)
gtkGlade/counter/: CMakeLists.txt
gtkGlade/counter/glade/: window.glade
gtkGlade/counter/src/: main.c
gtkGlade/counter_mvc/: CMakeLists.txt
gtkGlade/counter_mvc/glade/: window.glade  window.glade~
gtkGlade/counter_mvc/src/: main.c
gtkGlade/counter_mvc/src/controller/: controller.c  controller.h  controller_base.h
gtkGlade/counter_mvc/src/model/: model.c  model.h
gtkGlade/counter_mvc/src/view/: view.c  view.h  view_base.h
makeLesson/: readme.md
(+299 files in other folders)
